Add Janne Cederberg

--- a/THANKS
+++ b/THANKS
@@ -1,4 +1,5 @@
 Ari-Martti Hopiavuori for database feedback
+Janne Cederberg for database update
 Juhamatti Niemelä for database update
 Olli Pekkola for code cleanups
 Partly the idea and first lines of (re-written) code came from Atte H. (guaqua)
