--- a/THANKS
+++ b/THANKS
@@ -1,7 +1,10 @@
-Ari-Martti Hopiavuori for database feedback
-Janne Cederberg for database update
-Joonas Kuorilehto for database update
-Juhamatti Niemelä for database update
-Olli Pekkola for code cleanups
-Partly the idea and first lines of (re-written) code came from Atte H. (guaqua)
-Tuomo Komulainen for big patches and ideas
+Sorted list of people who have contributed to this project.
+
+Ari-Martti Hopiavuori
+Atte H. "guaqua"
+Janne Cederberg
+Joonas Kuorilehto
+Juhamatti Niemelä
+Linus Fogelholk
+Olli Pekkola
+Tuomo Komulainen
